Módulo de equipos

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1. Terminar el CRUD
+1. Búsqueda y paginación de equipos
 2. Tipar la clase Teams
 3. Documentar con swagger
 4. Gestionar errores y excepciones
