--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
 1. Búsqueda y paginación de equipos
 2. Tipar la clase Teams
-3. Documentar con swagger
-4. Gestionar errores y excepciones
-5. Utilizar mongoose cómo capa de persistencia, conectarse atlas
-6. Gestionar asincronía
-7. Completar con más apis
-8. Usar herencia para crear un servicio y repositorio base
-9. Integración con APIs externas
-10. Importar colección de postman
-11. Securizar la API REST
-12. Tests unitarios
-13. Integración con herramientas de CI
-14. Despliegue en contenedores docker
+3. Incluir validadores del modelo de datos
+4. Documentar con swagger
+5. Gestionar errores y excepciones
+6. Implementar middleware
+7. Utilizar mongoose cómo capa de persistencia, conectarse atlas
+8. Gestionar asincronía
+9. Completar con más apis
+10. Usar herencia para crear un servicio y repositorio base
+11. Integración con APIs externas
+12. Importar colección de postman
+13. Securizar la API REST
+14. Tests unitarios
+15. Integración con herramientas de CI
+16. Despliegue en contenedores docker
